Fix : Issue#2976 - Refactoring for the code smells.